<resources>
    <string name="app_name">HIKO</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="we_are_under_maintenance_text">We are Under Maintenance</string>
    <string name="dismiss">Dismiss</string>
    <string name="you_are_blocked_by_admin_text">You are blocked by admin</string>
    <string name="cancel">Cancel</string>
    <string name="you_are_logged_in_other_devices">You are logged in other devices</string>
    <string name="log_out">Log Out</string>
    <string name="policy">By Signing up you will be agree to our</string>
    <string name="terms_amp_condition">Terms &amp; Condition</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_wait">Please Wait</string>
    <string name="your_name">Your name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_age">Select your age</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_username_first">Enter Username first</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="minimum_age_must_be_18_years">Minimum age must be 18 years.</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="accept_privacy_policy">I’m 18+ and I’ve read the Privacy Policy.</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="please_accept_privacy_policy">Please confirm you have read the Privacy Policy to continue.</string>
    <string name="exit_app_confirmation">Are you sure you want to exit the app?</string>
    <string name="exit_this_app">Exit This App</string>
    <string name="fans">Fans</string>
    <string name="my_diamonds">My Diamonds</string>
    <string name="demo_host_center_text">Demo Host</string>
    <string name="demo_agency_center">Demo Agency</string>
    <string name="host_request">Host Request</string>
    <string name="offline_recharge">Offline Recharge</string>
    <string name="my_posts">My Posts</string>
    <string name="my_relites">My Relites</string>
    <string name="store">Store</string>
    <string name="free_coins">Free Coins</string>
    <string name="become_vip">Become VIP</string>
    <string name="user_level">User Level</string>
    <string name="copied_successfully">Copied Successfully</string>
    <string name="id">"ID: "</string>
    <string name="agency_center_text">Agency Center</string>
    <string name="host_center">Host Center</string>
    <string name="ok">OK</string>
    <string name="history">History</string>
    <string name="recharge">Recharge</string>
    <string name="my_diamond_balance">My Diamond Coin</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_diamonds">Enter Diamonds</string>
    <string name="note">Note</string>
    <string name="top_up">Top up</string>
    <string name="user_not_found">User Not Found</string>
    <string name="please_verify_user_id">please verify user id</string>
    <string name="enter_coin_value">Enter Coin Value</string>
    <string name="invalid_coin_value">Invalid Coin Value</string>
    <string name="insufficient_coins">Insufficient coins</string>
    <string name="send_successfully">Send Successfully</string>
    <string name="continue_text">Continue</string>
    <string name="in_this_apk_all_data_are_only_for_demo_purpose">Welcome to HIKO.</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="india">India</string>
    <string name="we_will_take_immediately_action_for_this_user_thank_you">We will take immediately action for this user \n Thank You</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="report_user">Report User</string>
    <string name="blocked_successfully">Blocked Successfully</string>
    <string name="report_this_user">Report This User</string>
    <string name="please_describe_your_issue_here">Please Describe your issue here..</string>
    <string name="unable_to_report">Unable to Report..\n</string>
    <string name="something_went_wrong_text">Something went wrong</string>
    <string name="block_this_user">Block This User</string>
    <string name="yes">Yes</string>
    <string name="type_message_first">Type message first</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected Error</string>
    <string name="call_ended">Call Ended!</string>
    <string name="ringing">Ringing...</string>
    <string name="we_will_take_immediately_action_for_this_user_n_thank_you">We will take immediately action for this user \n Thank You</string>
    <string name="enter_valid_message">Enter valid Message</string>
    <string name="is_busy_with_someone_else">" is busy with someone else."</string>
    <string name="discard_entire_video">Discard Entire video ?</string>
    <string name="if_you_go_back_now_you_will_lose_all_the_clips_added_to_your_video">If you go back now, you will lose all the clips added to your video</string>
    <string name="discard_video">Discard Video</string>
    <string name="incoming_call">Incoming call…</string>
    <string name="need_permissions">\"Need permissions \"</string>
    <string name="call_declined">Call Declined</string>
    <string name="rtc_stats_format">Downstream Bitrate: %.2f kbps%nDownstream Loss Rate: %.2f%% %nUpstream Bitrate: %.2f kbps%nUpstream Loss Rate: %.2f%%</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="unblock">Unblock</string>
    <string name="block">Block</string>
    <string name="message">Message</string>
    <string name="track_user">تتبع</string>
    <string name="no_live_rooms_available">No live rooms available</string>
    <string name="message_delete_confirmation">Are you sure You want to delete this Message?</string>
    <string name="following">Following</string>
    <string name="my_fans">My Fans</string>
    <string name="image">Image</string>
    <string name="choose_one">choose one</string>
    <string name="say_something">Say something…</string>
    <string name="failed_to_load_videos">Failed to load videos.</string>
    <string name="settings">Setting</string>
    <string name="notification">Notification</string>
    <string name="have_an_issue">Have an Issue</string>
    <string name="my_complains">My Complains</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about_us">About Us</string>
    <string name="next">Next</string>
    <string name="complaint_or_suggestion">Complaint or Suggestion</string>
    <string name="typing_somethings">Typing Somethings…</string>
    <string name="contact">Enter Contact Details</string>
    <string name="enter_your_mobile_number_or_email">Enter Mobile Number or E-mail Address</string>
    <string name="attach_your_image_or_screenshot">Attach your Image or Screenshot</string>
    <string name="browse">Browse</string>
    <string name="complain_send_successfully">Complain Send Successfully</string>
    <string name="please_enter_message">please Enter Message</string>
    <string name="please_enter_contact">please Enter contact</string>
    <string name="my_tickets">My Tickets</string>
    <string name="open">Open</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="status">Status</string>
    <string name="close">CLOSE</string>
    <string name="_1_self_introduction">Self-introduction</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="Bio">Bio</string>
    <string name="_2_agency_code">Agency Code</string>
    <string name="if_you_have">(If you have)</string>
    <string name="_3_upload_photos">Upload Profile Photo</string>
    <string name="personal_photo">Personal Photo</string>
    <string name="_4_bank_details">Bank Details</string>
    <string name="enter_your_bank_details">Enter your bank details</string>
    <string name="admission_car">Admission Car</string>
    <string name="enter_bio_text">Enter Bio</string>
    <string name="select_personal_photo">Select Personal Photo</string>
    <string name="image_file_not_found">Image file not found</string>
    <string name="host_request_send">Host Request Send</string>
    <string name="try_after_some_time">Please try After Some Time</string>
    <string name="avatar_frame">Avatar Frame</string>
    <string name="super_star">Super Star</string>
    <string name="you_don_t_have_required_diamonds">You don\'t have required Diamonds!</string>
    <string name="diamond_star">Diamond Star</string>
    <string name="stepping_in">Stepping in!</string>
    <string name="free_diamonds">Free Coins</string>
    <string name="method_1">Method 1 </string>
    <string name="method_2">Method 2 </string>
    <string name="your_refer_code">Your Refer Code:</string>
    <string name="enter_referral_code_here">Enter Referral code here</string>
    <string name="you_have_2_referrals">You have 2 referrals</string>
    <string name="referral_code_copied">Referral Code Copied!</string>
    <string name="enter_refer_code">Enter Refer Code</string>
    <string name="refereed_successfully">Refereed Successfully</string>
    <string name="generic_error">Something went wrong. Please try again later.</string>
    <string name="earned_by_user">Reward Granted</string>
    <string name="invite_desc">"Invite your Friends! for each payout of invited friends, you and your friend both will receive "</string>
    <string name="vip_plan">VIP Plan</string>
    <string name="become_vip_and_get_many_privileges">Become VIP and get many Privileges</string>
    <string name="vip_privileges">VIP Privileges</string>
    <string name="get_vip_to_access_all_function">Get VIP to Access All Function</string>
    <string name="vip_package">VIP Package</string>
    <string name="get_now">Get Now</string>
    <string name="first_select_the_plan">First select the plan.</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="google_play">Google Play</string>
    <string name="hot">Hot</string>
    <string name="your_level">Your Level</string>
    <string name="no_level_available">No Level Available</string>
    <string name="unknown">Unknown</string>
    <string name="income">Income</string>
    <string name="record">Record</string>
    <string name="diamonds">Diamonds</string>
    <string name="outcome">Outcome</string>
    <string name="r_coins">R-Coins</string>
    <string name="confirm">Confirm</string>
    <string name="diamond_record">Diamond Record</string>
    <string name="sure_you_want_to_stand_up">Are you sure you want to stand up?</string>
    <string name="take_the_mic">Take the Mic</string>
    <string name="give_the_mic">Give the Mic</string>
    <string name="lock_the_mic">Lock the Mic</string>
    <string name="mute_the_mic">Mute the Mic</string>
    <string name="room_passcode">Room passcode</string>
    <string name="enter_room_passcode">Enter room passcode</string>
    <string name="all_is_well_party">All is well party</string>
    <string name="private_room">Private Room</string>
    <string name="decline">Decline</string>
    <string name="delete_confirmation_text">Are you sure you want to delete? \nThis action cannot be undone</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="confirm_stand_up">Confirm Stand-Up</string>
    <string name="delete">Delete</string>
</resources>