<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/popup_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivVector"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_remove_seat" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15sp"
                    android:fontFamily="@font/airbnbcereal_w_xbd"
                    android:text="@string/confirm_stand_up"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12sp"
                    android:fontFamily="@font/airbnbcereal_w_bk"
                    android:gravity="center"
                    android:text="@string/sure_you_want_to_stand_up"
                    android:textColor="@color/white_80"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7sp"
                    android:layout_marginBottom="2sp"
                    android:weightSum="2"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginHorizontal="5sp"
                        android:fontFamily="@font/airbnbcereal_w_bd"
                        android:background="@drawable/gray_strock_30"
                        android:text="@string/cancel"
                        android:textSize="18sp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:textColor="@color/hintColor" />

                    <TextView
                        android:id="@+id/btnSure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_bg_radius_50"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingHorizontal="10sp"
                        android:paddingVertical="10dp"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="5sp"
                        android:text="@string/yes"
                        android:fontFamily="@font/airbnbcereal_w_bd"
                        android:textColor="@color/white" />



                </LinearLayout>


            </LinearLayout>

    </RelativeLayout>
</layout>